# python-lib

./: README.md  cookiecutter.json
{{cookiecutter.hyphenated}}/: LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.hyphenated}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.hyphenated}}/tests/: test_{{cookiecutter.underscored}}.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/: __init__.py
