[project]
description = "{{ cookiecutter.description }}"
name = "{{ cookiecutter.hyphenated }}"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
build = ["setuptools", "wheel", "build"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = [".venv"]
ignore_missing_imports = true
disallow_untyped_defs = false
show_error_codes = true

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
extend-select = [
  "E", # style errors
  "D", # pydocstyle
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
]
extend-ignore = [
  "D100", # Allow missing docstring in public module
  "D211", # Instead, use D203 (one blank line before class docstring)
  "D212", # Instead, use D213 (start multi-line summaries on the second line)
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/actions"
